<resources>
    <string name="app_name">Thirukkural</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="lang_tamil">தமிழ்</string>
    <string name="lang_english">English</string>
    <string name="Section">Section</string>
    <string name="part">Part</string>
    <string name="chapter">Chapter</string>
    <string name="couplet">Couplet</string>
    <string name="commentary">Commentary</string>
    <string name="favourites">Favourites</string>
    <string name="favourite_added">Added to Favourites</string>
    <string name="favourite_removed">Removed</string>
    <string name="favourite_removed_single">Removed from Favourites</string>
    <string name="favourite_empty">Nothing in Favourites</string>
    <string name="favourite_remove_title">Remove Favourites?</string>
    <string name="favourite_remove_msg">All the favourite couplets will be removed.</string>
    <string name="undo">UNDO</string>
    <string name="search">Search the Couplets</string>
    <string name="no_search_result">No Search Results Found</string>
    <string name="no_search_subresult">Please check that you have the correct spelling \nor try a different keyword</string>
    <string name="search_result">Results</string>
    <string name="introduction">Introduction</string>
    <string name="booktitle">Statements Devoid of Untruth</string>
    <string name="others">Others</string>
    <string name="yes">Ok</string>
    <string name="no">Cancel</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_virtue">Virtue</string>
    <string name="navigation_wealth">Wealth</string>
    <string name="navigation_love">Love</string>
    <string-array name="nav_item_activity_titles">
        <item>Virtue</item>
        <item>Wealth</item>
        <item>Love</item>
    </string-array>
    <string name="tab_introduction">Prologue</string>
    <string name="tab_domestic_virtue">Domestic Virtue</string>
    <string name="tab_ascetic_virtue">Ascetic Virtue</string>
    <string name="tab_fate">Fate</string>
    <string name="tab_royalty">Royalty</string>
    <string name="tab_ministers_of_state">Ministers of State</string>
    <string name="tab_the_essentials_of_a_state">The Essentials of a State</string>
    <string name="tab_way_of_making_wealth">Way of Making Wealth</string>
    <string name="tab_excellence_of_an_army">The Excellence of an Army</string>
    <string name="tab_friendship">Friendship</string>
    <string name="tab_miscellaneous">Miscellaneous</string>
    <string name="tab_the_premarital_love">The Pre-marital love</string>
    <string name="tab_the_postmarital_love">The Post-marital love</string>
    <string-array name="chapter_prologue_titles">
        <item>The Praise of God</item>
        <item>The Excellence of Rain</item>
        <item>The Greatness of Ascetics</item>
        <item>Assertion of the Strength of Virtue</item>
    </string-array>
    <string-array name="chapter_domestic_titles">
        <item>Domestic Life</item>
        <item>The Goodness of the Help to Domestic Life</item>
        <item>The Obtaining of Sons</item>
        <item>The Possession of Love</item>
        <item>Cherishing Guests</item>
        <item>The Utterance of Pleasant Words</item>
        <item>The Knowledge of Benefits Conferred: Gratitude</item>
        <item>Impartiality</item>
        <item>The Possession of Self-restraint</item>
        <item>The Possession of Decorum</item>
        <item>Not coveting another\'s Wife</item>
        <item>The Possession of Patience, Forbearance</item>
        <item>Not Envying</item>
        <item>Not Coveting</item>
        <item>Not Backbiting</item>
        <item>The Not Speaking Profitless Words</item>
        <item>Dread of Evil Deeds</item>
        <item>The knowledge of what is Befitting a Man\'s Position</item>
        <item>Giving</item>
        <item>Renown</item>
    </string-array>
    <string-array name="chapter_ascetic_titles">
        <item>The Possession of Benevolence</item>
        <item>The Renunciation of Flesh</item>
        <item>Penance</item>
        <item>Inconsistent Conduct</item>
        <item>The Absence of Fraud</item>
        <item>Veracity</item>
        <item>The not being Angry</item>
        <item>Not doing Evil</item>
        <item>Not killing</item>
        <item>Instability</item>
        <item>Renunciation</item>
        <item>Knowledge of the True</item>
        <item>The Extirpation of Desire</item>
    </string-array>
    <string-array name="chapter_fate_titles">
        <item>Fate</item>
    </string-array>
    <string-array name="chapter_royalty_titles">
        <item>The Greatness of a King</item>
        <item>Learning</item>
        <item>Ignorance</item>
        <item>Hearing</item>
        <item>The Possession of Knowledge</item>
        <item>The Correction of Faults</item>
        <item>Seeking the Aid of Great Men</item>
        <item>Avoiding mean Associations</item>
        <item>Acting after due Consideration</item>
        <item>The Knowledge of Power</item>
        <item>Knowing the fitting Time</item>
        <item>Knowing the Place</item>
        <item>Selection and Confidence</item>
        <item>Selection and Employment</item>
        <item>Cherishing one\'s Kindred</item>
        <item>Unforgetfulness</item>
        <item>The Right Sceptre</item>
        <item>The Cruel Sceptre</item>
        <item>Absence of Terrorism</item>
        <item>Benignity</item>
        <item>Detectives</item>
        <item>Energy</item>
        <item>Unsluggishness</item>
        <item>Manly Effort</item>
        <item>Hopefulness in Trouble</item>
    </string-array>
    <string-array name="chapter_ministersofstate_titles">
        <item>The Office of Minister of state</item>
        <item>Power in Speech</item>
        <item>Purity in Action</item>
        <item>Power in Action</item>
        <item>Modes of Action</item>
        <item>The Envoy</item>
        <item>Conduct in the Presence of the King</item>
        <item>The Knowledge of Indications</item>
        <item>The Knowledge of the Council Chamber</item>
        <item>Not to dread the council</item>
    </string-array>
    <string-array name="chapter_theessentialsofastate_titles">
        <item>The Land</item>
        <item>The Fortification</item>
    </string-array>
    <string-array name="chapter_wayofmakingwealth_titles">
        <item>Way of Accumulating Wealth</item>
    </string-array>
    <string-array name="chapter_theexcellenceofanarmy_titles">
        <item>The Excellence of an Army</item>
        <item>Military Spirit</item>
    </string-array>
    <string-array name="chapter_friendship_titles">
        <item>Friendship</item>
        <item>Investigation in forming Friendships</item>
        <item>Familiarity</item>
        <item>Evil Friendship</item>
        <item>Unreal Friendship</item>
        <item>Folly</item>
        <item>Ignorance</item>
        <item>Hostility</item>
        <item>The Might of Hatred</item>
        <item>Knowing the Quality of Hate</item>
        <item>Enmity within</item>
        <item>Not Offending the Great</item>
        <item>Being led by Women</item>
        <item>Wanton Women</item>
        <item>Not Drinking Palm-Wine</item>
        <item>Gaming (Gambling)</item>
        <item>Medicine</item>
    </string-array>
    <string-array name="chapter_miscellaneous_titles">
        <item>Nobility</item>
        <item>Honour</item>
        <item>Greatness</item>
        <item>Perfectness</item>
        <item>Courtesy</item>
        <item>Wealth without Benefaction</item>
        <item>Shame</item>
        <item>The Way of Maintaining the Family</item>
        <item>Agriculture</item>
        <item>Poverty</item>
        <item>Mendicancy</item>
        <item>The Dread of Mendicancy</item>
        <item>Baseness</item>
    </string-array>
    <string-array name="chapter_thepremaritallove_titles">
        <item>Mental Distrubances caused by the Beauty of the Princess</item>
        <item>Recognition of the Signs (of Mutual Love)</item>
        <item>Rejoicing in the Embrace</item>
        <item>The Praise of her Beauty</item>
        <item>Declaration of Love\'s special Excellence</item>
        <item>The Abandonment of Reserve</item>
        <item>The Announcement of the Rumour</item>
    </string-array>
    <string-array name="chapter_thepostmaritallove_titles">
        <item>Separation unendurable</item>
        <item>Complainings</item>
        <item>Eyes consumed with Grief</item>
        <item>The Pallid Hue</item>
        <item>The Solitary Anguish</item>
        <item>Sad Memories</item>
        <item>The Visions of the Night</item>
        <item>Lamentations at Eventide</item>
        <item>Wasting Away</item>
        <item>Soliloquy</item>
        <item>Reserve Overcome</item>
        <item>Mutual Desire</item>
        <item>The Reading of the Signs</item>
        <item>Desire of Reunion</item>
        <item>Exposutulation with Oneself</item>
        <item>Pouting</item>
        <item>Feigned Anger</item>
        <item>The Pleasures of Temporary Variance</item>
    </string-array>
    <string name="title_activity_introduction">An Introduction</string>
    <string name="alagar_text">பரிமேலழகர் உரை</string>
    <string name="alagar_commentary">பரிமேலழகர் உரை விளக்கம்</string>
    <string name="alagar_chapter_intro">பரிமேலழகர் அதிகார முன்னுரை</string>
    <string name="manakudavar_text">மணக்குடவர் உரை</string>
</resources>