<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_virtue"
            android:icon="@drawable/ic_virtue"
            android:title="@string/navigation_virtue"/>
        <item
            android:id="@+id/nav_wealth"
            android:icon="@drawable/ic_wealth"
            android:title="@string/navigation_wealth"/>
        <item
            android:id="@+id/nav_love"
            android:icon="@drawable/ic_love"
            android:title="@string/navigation_love"/>
    </group>



    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/nav_intro"
                android:icon="@drawable/ic_book"
                android:title="@string/introduction"/>
            <item
                android:id="@+id/nav_favourites"
                android:icon="@drawable/ic_grade"
                android:title="@string/favourites" />
        </menu>
    </item>
</menu>


